--- a/src/components/MainWindow/Messages/Messages.module.css
+++ b/src/components/MainWindow/Messages/Messages.module.css
@@ -1,3 +1,28 @@
+.dialogs {
+    display: grid;
+    grid-template-columns: 2fr 6fr;
+    padding: 15px;
+}
+
+.dialogItem {
+
+}
+
+.dialog a {
+    color: #211d1c;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: "Century Gothic";
+}
+
+.dialog a:hover {
+    color: green;
+}
+
 .messages {
+
+}
+
+.message {
 
 }
