--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,28 +1,33 @@
 .nav {
     grid-area: n;
-    background-color: #dcb87e;
+    background-color: #c9c9c9;
     padding: 15px;
+    border: solid thin;
 }
 
 .item {
     padding: 10px 0px;
     margin: 5px;
-    border: solid #ce3f13;
+    border: solid #41403c 3px;
     border-radius: 7px;
-    background-color: #d2bdbd;
+    background-color: #f5f5f5;
+    font-size: 18px;
 }
 
 .item a{
     padding-left: 10px;
-    color: #ce3f13;
+    color: #211d1c;
     text-decoration: none;
+    font-weight: bold;
+    font-family: "Century Gothic";
 }
 
 .item a.activeLink {
-    color: #730bc4;
+    color: #f80505;
 }
 
-a:hover {
-    color: green;
+.item a:hover {
+    color: #539b24;
     font-weight: bolder;
+    font-size: 22px;
 }
