--- a/src/components/MainWindow/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/MainWindow/Profile/MyPosts/Post/Post.module.css
@@ -7,8 +7,11 @@
     margin: 10px 0px;
 }
 
+.itemText {
+    margin-top: 20px;
+}
 .item img {
-    margin-top: 10px;
+    margin: 10px 0px;
     width: 70px;
     height: 70px;
     border-radius: 35px;
