--- a/src/components/MainWindow/Messages/DialogItem/DialogsItem.module.css
+++ b/src/components/MainWindow/Messages/DialogItem/DialogsItem.module.css
@@ -1,3 +1,9 @@
+.dialog {
+    padding-top: 10px;
+    text-align: center;
+    width: 70px;
+}
+
 .dialog a {
     color: #211d1c;
     text-decoration: none;
@@ -8,4 +14,11 @@
 .dialog a:hover {
     color: green;
     text-decoration: underline;
+}
+
+.dialog img {
+    width: 60px;
+    height: 60px;
+    border: solid 3px #443d32;
+    border-radius: 50%;
 }
