--- a/src/components/MainWindow/Messages/Message/Message.module.css
+++ b/src/components/MainWindow/Messages/Message/Message.module.css
@@ -1,3 +1,11 @@
 .message {
-
+    border: dotted 1px black;
+    width: 350px;
+    height: 75px;
+    margin: 5px 0px;
+    border-radius: 20px 20px 20px 0px;
+    padding: 10px;
+    background-color: #f3ebe2;
+    font-size: 1.2em;
+    font-style: oblique;
 }
