--- a/src/common/FormsControls/FormsControls.module.css
+++ b/src/common/FormsControls/FormsControls.module.css
@@ -10,3 +10,10 @@
 .formControl.error span {
     color: red;
 }
+
+.formSummuryError{
+    border: solid 2px red;
+    padding: 5px;
+    color: red;
+    min-width: 150px;
+}
