--- a/src/common/Paginator/Paginator.module.css
+++ b/src/common/Paginator/Paginator.module.css
@@ -1,3 +1,20 @@
-.selectedPage {
-    font-weight: 700;
+.paginator {
+    margin: 10px;
+}
+.pageNumber {
+    padding: 2px 5px;
+    border: 1px solid #565454;
+    margin: 1px;
+    border-radius: 4px;
+}
+
+.pageNumber.selectedPage {
+    font-weight: bold;
+    border-color: black;
+    background-color: #e0c291;
+}
+
+.pageNumber:hover {
+    background-color: #ab7e36;
+    border-color: #564f49;
 }
