--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,10 +2,17 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 80%;
+    width: 1200px;
     margin: 0 auto;
 }
 
 .appContentWindow {
-    background-color: #c06666;
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+
+    width: 100%;
+    background-color: #e5cba1;
+    margin-bottom: 5px;
+    min-height: 400px;
 }
