--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,35 +1,45 @@
 .nav {
+    background-color: #dcb87e;
+    padding: 0 10px;
+    width: 1200px;
+    margin-top: 5px;
+    height: 50px;
+}
+
+.nav__block {
     display: flex;
-    justify-content: space-between;
-    background-color: #c9c9c9;
-    padding: 15px;
-    border: solid thin;
+    justify-content: space-around;
+    align-items: center;
+    width: 70%;
+    margin: 0 auto;
 }
 
 .item {
-    padding: 10px 0px;
-    margin: 5px;
-    border: solid #41403c 3px;
-    border-radius: 7px;
-    background-color: #f5f5f5;
+    text-align: center;
+    padding: 10px 0;
     font-size: 18px;
+    width: 12%;
+    min-height: 50px;
+    font-family: 'Dancing Script', cursive;
+}
+
+.item:hover {
+    background-color: #e3c796;
+    border-bottom: 3px solid #601313;
 }
 
 .item a {
     padding-left: 10px;
-    color: #211d1c;
+    color: #601313;
     text-decoration: none;
     font-weight: bold;
-    font-family: "Century Gothic";
 }
 
 .item a.activeLink {
-    color: #f80505;
-    text-decoration: underline;
+    color: #fff;
 }
 
-.item a:hover {
-    color: #539b24;
-    font-weight: bolder;
-    text-decoration: underline;
+.nav__text {
+    font-family: 'Patrick Hand', cursive;
+    font-size: 20px;
 }
