--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -14,5 +14,5 @@
     width: 100%;
     background-color: #e5cba1;
     margin-bottom: 5px;
-    min-height: 400px;
+    min-height: 750px;
 }
