--- a/src/common/Paginator/Paginator.module.css
+++ b/src/common/Paginator/Paginator.module.css
@@ -1,8 +1,11 @@
 .paginator {
-    margin: 10px;
+    display: flex;
+    justify-content: center ;
+    align-items: center;
 }
+
 .pageNumber {
-    padding: 2px 5px;
+    padding: 5px 8px;
     border: 1px solid #565454;
     margin: 1px;
     border-radius: 4px;
@@ -11,10 +14,36 @@
 .pageNumber.selectedPage {
     font-weight: bold;
     border-color: black;
-    background-color: #e0c291;
+    background-color: #dcb87e;
+    color: #fff;
 }
 
 .pageNumber:hover {
-    background-color: #ab7e36;
-    border-color: #564f49;
+    cursor: pointer;
+    background-color: #e3c796;
+}
+
+.user__btn {
+    display: flex;
+    justify-content: center;
+
+    margin: -5px auto 20px;
+    text-align: center;
+    width: 120px;
+    height: 30px;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: #601313;
+}
+
+.user__btn:hover {
+    opacity: .9;
+    color: #fff;
+}
+
+.user__btn button {
+    border: none;
+    background: none;
+    color: #fff;
+    cursor: pointer;
 }
