--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 1200px;
+    width: 80%;
     height: 60px;
     background-color: #601313;
     padding: 10px 5px;
