--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -35,7 +35,7 @@
     display: flex;
     justify-content: center;
 
-    margin: 10px auto;
+    margin: 10px auto 30px;
     text-align: center;
     width: 120px;
     height: 30px;
