--- a/src/components/MainWindow/Dialogs/Dialog/Dialog.module.css
+++ b/src/components/MainWindow/Dialogs/Dialog/Dialog.module.css
@@ -1,10 +1,10 @@
 .message {
     border: dotted 1px black;
-    width: 350px;
+    width: 100%;
     height: 75px;
-    margin: 5px 0px;
-    border-radius: 20px 20px 20px 0px;
-    padding: 10px;
+    margin: 10px 0 20px;
+    border-radius: 20px 20px 20px 0;
+    padding: 15px 20px;
     background-color: #f3ebe2;
     font-size: 1.2em;
     font-style: oblique;
