--- a/src/components/MainWindow/Dialogs/DialogItem/DialogsItem.module.css
+++ b/src/components/MainWindow/Dialogs/DialogItem/DialogsItem.module.css
@@ -5,14 +5,13 @@
 }
 
 .dialog a {
-    color: #211d1c;
+    color: #601313;
     text-decoration: none;
     font-weight: bold;
     font-family: "Century Gothic";
 }
 
 .dialog a:hover {
-    color: green;
     text-decoration: underline;
 }
 
