--- a/src/components/MainWindow/Dialogs/Dialogs.module.css
+++ b/src/components/MainWindow/Dialogs/Dialogs.module.css
@@ -1,20 +1,21 @@
 .dialogs {
-    display: grid;
-    grid-template-columns: 10% 90%;
-    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 80%;
+}
+
+.dialogs__dialog {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
 }
 
 .dialogItem {
-
+    width: 15%;
 }
 
-.dialog a {
-    color: #211d1c;
-    text-decoration: none;
-    font-weight: bold;
-    font-family: "Century Gothic";
-}
-
-.dialog a:hover {
-    color: green;
+.messages {
+    width: 75%;
 }
