--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .nav {
     background-color: #dcb87e;
     padding: 0 10px;
-    width: 1200px;
+    width: 100%;
     margin-top: 5px;
     height: 50px;
 }
