--- a/src/components/MainWindow/Profile/Profile.module.css
+++ b/src/components/MainWindow/Profile/Profile.module.css
@@ -1,12 +1,6 @@
 .profile {
-    grid-area: p;
-}
-
-.profile img {
-    width: 100%;
-    height: 400px;
-}
-
-.ava {
-    padding: 10px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
