--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileStatus/ProfileStatus.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileStatus/ProfileStatus.module.css
@@ -1,7 +1,29 @@
 .statusText {
-    cursor: pointer;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
     width: 300px;
+    font-size: 22px;
+    color: #601313;
+}
+
+.activeInput {
+    width: 300px;
+    font-size: 22px;
+    color: #601313;
+}
+
+.status__text {
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.status__pencil:hover {
+    color: #905e1c;
+}
+
+.activeInput input {
+    width: 300px;
+    height: 30px;
 }
