--- a/src/components/MainWindow/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/MainWindow/Profile/MyPosts/MyPosts.module.css
@@ -1,7 +1,45 @@
 .myPosts {
-    padding: 10px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.post__title {
+    font-size: 28px;
+    font-weight: 700;
+    font-family: 'Luckiest Guy', cursive;
+    padding: 10px 0;
+}
+
+.post__title:hover {
+    text-shadow: 3px 2px 0 #030303;
 }
 
 .posts {
 
+}
+
+.form__btn {
+    display: flex;
+    justify-content: center;
+
+    margin: 10px auto 30px;
+    text-align: center;
+    width: 120px;
+    height: 30px;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: #601313;
+}
+
+.form__btn:hover {
+    opacity: .9;
+    color: #fff;
+}
+
+.form__btn button {
+    border: none;
+    background: none;
+    color: #fff;
+    cursor: pointer;
 }
