--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileData/ProfileData.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileData/ProfileData.module.css
@@ -22,3 +22,57 @@
     color: #fff;
     cursor: pointer;
 }
+
+.formBlock {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    padding: 3px 0;
+    margin: 0 auto;
+}
+
+.contacts__container {
+    margin-top: 20px;
+}
+
+.contacts__Title {
+    font-size: 24px;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    text-decoration: underline;
+    font-family: 'Pangolin', cursive;
+}
+
+.contacts__Title:hover {
+    color: #fff;
+    text-shadow: 3px 1px 1px #030303;
+}
+
+.contact__item {
+    width: 300px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.contactsRow {
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.contactsBlock {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.contactsBlock__item {
+    width: 50%;
+    margin-bottom: 20px;
+}
