--- a/src/common/Paginator/Paginator.module.css
+++ b/src/common/Paginator/Paginator.module.css
@@ -20,7 +20,8 @@
 
 .pageNumber:hover {
     cursor: pointer;
-    background-color: #e3c796;
+    background-color: #601313;
+    color: #fff;
 }
 
 .user__btn {
