--- a/src/components/MainWindow/Dialogs/Dialog/Dialog.module.css
+++ b/src/components/MainWindow/Dialogs/Dialog/Dialog.module.css
@@ -1,11 +1,14 @@
 .message {
+    margin: 10px 0;
+}
+
+.message__item {
     border: dotted 1px black;
     width: 100%;
-    height: 75px;
-    margin: 10px 0 20px;
     border-radius: 20px 20px 20px 0;
     padding: 15px 20px;
     background-color: #f3ebe2;
     font-size: 1.2em;
     font-style: oblique;
+    min-height: 130px;
 }
