--- a/src/components/MainWindow/Dialogs/DialogItem/DialogsItem.module.css
+++ b/src/components/MainWindow/Dialogs/DialogItem/DialogsItem.module.css
@@ -1,7 +1,9 @@
 .dialog {
-    padding-top: 10px;
-    text-align: center;
-    width: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 150px;
 }
 
 .dialog a {
@@ -16,8 +18,8 @@
 }
 
 .dialog img {
-    width: 60px;
-    height: 60px;
+    width: 100px;
+    height: 100px;
     border: solid 3px #443d32;
     border-radius: 50%;
 }
