--- a/src/components/MainWindow/Dialogs/Dialogs.module.css
+++ b/src/components/MainWindow/Dialogs/Dialogs.module.css
@@ -8,14 +8,25 @@
 
 .dialogs__dialog {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    align-items: center;
     width: 80%;
+    min-height: 150px;
 }
 
 .dialogItem {
     width: 15%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .messages {
     width: 75%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
