--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,4 +15,7 @@
     background-color: #e5cba1;
     margin-bottom: 5px;
     min-height: 750px;
+
+    border-right: 3px solid #dcb87e;
+    border-left: 3px solid #dcb87e;
 }
