--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -69,7 +69,7 @@
 
 .login__userName {
     font-size: 24px;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Patrick Hand', cursive;
     font-weight: 700;
 }
 
