--- a/src/components/MainWindow/News/News.module.css
+++ b/src/components/MainWindow/News/News.module.css
@@ -1,3 +1,24 @@
 .news {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+}
 
+.news__title {
+    font-size: 32px;
+    font-weight: 700;
+    font-family: 'Luckiest Guy', cursive;
+    padding: 0 0 10px 0;
+}
+
+.news__title:hover {
+    color: #333;
+}
+
+.newsBlock {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
 }
