--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileData/Contact/Contact.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileData/Contact/Contact.module.css
@@ -2,13 +2,17 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 16px;
 }
 
 .formBlock a {
     text-decoration: none;
+    color: black;
 }
 
-.formBlock a.isActive {
-    color: #fff;
+.formBlock a:hover {
+    text-decoration: underline;
+    color: #333;
 }
