--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileStatus/ProfileStatus.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileStatus/ProfileStatus.module.css
@@ -1,6 +1,5 @@
 h3:hover {
-    color: #fff;
-    text-shadow: 3px 2px 0 #030303;
+    color: #333;
 }
 
 .statusText {
@@ -28,7 +27,7 @@ h3:hover {
 }
 
 .status__text:hover {
-    color: #fff;
+    color: #333;
 }
 
 .status__pencil:hover {
