--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileDataForm/ProfileDataForm.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileDataForm/ProfileDataForm.module.css
@@ -24,12 +24,18 @@
 }
 
 .formContainer {
-    color: #601313;
     font-size: 18px;
+}
+
+.form_edit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .formBlock {
     display: flex;
+    width: 100%;
     padding: 3px 0;
 }
 
@@ -40,12 +46,17 @@
 }
 
 .contacts__Title {
-    font-size: 22px;
+    font-size: 24px;
     font-weight: 700;
     display: flex;
     justify-content: center;
-    margin-bottom: 10px;
-    font-family: 'Luckiest Guy', cursive;
+    margin-bottom: 20px;
+    text-decoration: underline;
+    font-family: 'Pangolin', cursive;
+}
+
+.contacts__Title:hover {
+    color: #333;
 }
 
 .contact__item {
