--- a/src/components/MainWindow/Users/Users.module.css
+++ b/src/components/MainWindow/Users/Users.module.css
@@ -11,3 +11,9 @@
     text-align: center;
     margin-top: 10px;
 }
+
+@media (max-width: 640px) {
+    .searchResult {
+        justify-content: center;
+    }
+}
