--- a/src/pages/Chat/Chat/Messages/Message/Message.module.css
+++ b/src/pages/Chat/Chat/Messages/Message/Message.module.css
@@ -34,7 +34,7 @@
     display: flex;
     justify-content: flex-start;
     padding-left: 15px;
-    font-size: 30px;
-    font-family: 'Dancing Script', cursive;
+    font-size: 24px;
+    font-family: 'Pangolin', cursive;
     font-weight: 700;
 }
