--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -137,4 +137,10 @@
         font-size: 18px;
     }
 
+    .login__exitBlock {
+        padding-right: 15px;
+        width: 40px;
+        height: 40px;
+    }
+
 }
