--- a/src/components/MainWindow/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/MainWindow/Profile/MyPosts/Post/Post.module.css
@@ -28,8 +28,12 @@
     margin: 10px 0;
     width: 70px;
     height: 70px;
-    border-radius: 35px;
-    border: solid 3px #601313;
+    border-radius: 50%;
+    border: outset 4px ;
+}
+
+.postAvatar img:hover {
+    border: outset 4px #905e1c;
 }
 
 .likeCounter {
@@ -57,4 +61,55 @@
 
 .fingerUp:hover {
     color: #fff;
+}
+
+@media (max-width: 750px) {
+
+    .postAvatar img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .itemText {
+        font-size: 22px;
+    }
+
+    .likeCounter {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 500px) {
+
+    .postAvatar img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .itemText {
+        font-size: 14px;
+    }
+
+    .activeBlock {
+        width: 120px;
+    }
+
+    .likeCounter {
+        font-size: 12px;
+    }
+
+    .activeBlock {
+        width: 80px;
+    }
+}
+
+@media (max-width: 400px) {
+
+    .likeCounter {
+        font-size: 10px;
+    }
+
+    .activeBlock {
+        width: 80px;
+    }
 }
