--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileData/ProfileData.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileData/ProfileData.module.css
@@ -24,8 +24,9 @@
 }
 
 .formBlock {
-    width: 50%;
+    width: 80%;
     display: flex;
+    justify-content: center;
     align-items: center;
     padding: 3px 0;
     margin: 0 auto;
@@ -79,11 +80,45 @@
     font-size: 18px;
 }
 
-.formBlock b {
-    min-width: 180px;
-}
-
 .contacts__text {
     padding-bottom: 20px;
     font-size: 18px;
+    font-weight: 700;
 }
+
+.icon {
+    font-size: 14px;
+    color: green;
+    font-weight: 700;
+}
+
+.formBlock__title {
+    font-weight: 700;
+}
+
+@media (max-width: 1100px) {
+
+    .contactsBlock {
+        justify-content: center;
+    }
+
+    .contactsBlock__item {
+        width: 100%;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 625px) {
+
+    .contacts__text {
+        font-size: 16px;
+    }
+
+    .formBlock {
+        display: block;
+        text-align: center;
+    }
+}
+
+
+
