--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileDataForm/ProfileDataForm.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileEdit/ProfileDataForm/ProfileDataForm.module.css
@@ -34,9 +34,19 @@
 }
 
 .formBlock {
-    display: flex;
     width: 100%;
+    text-align: center;
     padding: 3px 0;
+    margin-bottom: 6px;
+}
+
+.formBlock__check {
+    display: flex;
+    margin-bottom: 6px;
+}
+
+.formBlock input {
+    width: 60%;
 }
 
 .contactsBlock {
@@ -65,6 +75,39 @@
     margin-bottom: 20px;
 }
 
+.contact__item b {
+    font-size: 20px;
+}
+
 .contact__item input {
     width: 100%
+}
+
+
+@media (max-width: 1130px) {
+
+    .contact__item {
+        width: 45%;
+    }
+
+}
+
+@media (max-width: 755px) {
+    .contactsBlock {
+        justify-content: center;
+    }
+
+    .contact__item {
+        width: 80%;
+    }
+
+    .formBlock {
+        display: block;
+        text-align: center;
+    }
+
+    .formBlock input {
+        width: 80%;
+    }
+
 }
