--- a/src/components/MainWindow/Users/User/User.module.css
+++ b/src/components/MainWindow/Users/User/User.module.css
@@ -1,8 +1,12 @@
 .userPhoto {
     width: 100px;
     height: 100px;
-    border: 4px solid #601313;
+    border: 4px outset #fff;
     border-radius: 50%;
+}
+
+.userPhoto:hover {
+    border: 4px outset #905e1c;
 }
 
 .userBlock {
