--- a/src/components/MainWindow/Users/Users.module.css
+++ b/src/components/MainWindow/Users/Users.module.css
@@ -1,3 +1,9 @@
+.page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .users {
     width: 80%;
     text-align: center;
