--- a/src/components/MainWindow/News/NewsItem/NewsItem.module.css
+++ b/src/components/MainWindow/News/NewsItem/NewsItem.module.css
@@ -1,5 +1,6 @@
 .newsBlock__item {
     display: flex;
+    flex-wrap: wrap;
     width: 90%;
     background-color: #250202;
     text-align: center;
@@ -18,9 +19,10 @@
 }
 
 .main {
-    padding: 20px 15px 0;
     display: flex;
     flex-direction: column;
+   justify-content: space-between;
+    padding: 20px 15px 0;
     width: 50%;
     background-color: #e8b564;
 }
@@ -31,8 +33,72 @@
     font-weight: 700;
 }
 
+.main__title input {
+    width: 70%;
+}
+
 .main__text {
     font-size: 18px;
     line-height: 1.5;
     text-align: justify;
+}
+
+.main__text textarea {
+    width: 100%;
+    min-height: 200px
+}
+
+.button__group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 15px;
+}
+
+.form__btn {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 5px;
+
+    width: 120px;
+    height: 30px;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: #601313;
+}
+
+.form__btn:hover {
+    opacity: .9;
+    color: #fff;
+}
+
+.form__btn button {
+    border: none;
+    background: none;
+    color: #fff;
+    cursor: pointer;
+}
+
+
+@media (max-width: 960px) {
+    .newsBlock__itemBlock {
+        flex-direction: column;
+    }
+
+    .newsBlock__itemBlock {
+        width: 100%;
+    }
+
+    .main {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+
+    .button__group {
+        flex-direction: column;
+        align-items: center;
+    }
 }
