--- a/src/pages/Chat/Chat/Messages/Message/Message.module.css
+++ b/src/pages/Chat/Chat/Messages/Message/Message.module.css
@@ -28,6 +28,7 @@
     border-radius: 50%;
     border: 4px outset #fff;
     cursor: pointer;
+    box-shadow: 3px 5px 10px 2px rgb(34 60 80 / 60%);
 }
 
 .message__img:hover {
