--- a/src/components/MainWindow/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/MainWindow/Profile/ProfileInfo/ProfileInfo.module.css
@@ -35,6 +35,31 @@
     margin-top: 30px;
 }
 
+.view__btn {
+    display: flex;
+    justify-content: center;
+
+    margin: 10px auto 10px;
+    text-align: center;
+    width: 120px;
+    height: 30px;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: #601313;
+}
+
+.view__btn:hover {
+    opacity: .9;
+    color: #fff;
+}
+
+.view__btn button {
+    border: none;
+    background: none;
+    color: #fff;
+    cursor: pointer;
+}
+
 
 @media (max-width: 850px) {
 
