--- a/src/common/FormsControls/FormsControls.module.css
+++ b/src/common/FormsControls/FormsControls.module.css
@@ -29,3 +29,9 @@
     border-radius: 5px;
     resize: none;
 }
+
+input {
+    border-radius: 4px;
+    border: 2px solid #dcb87e;
+    outline: none;
+}
