--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 60px;
+    min-height: 60px;
     background-color: #601313;
     padding: 10px 5px;
     border-radius: 5px 5px 0 0;
@@ -15,7 +15,54 @@
     color: #fff;
 }
 
-
 .copyright__text .copyright__header {
     color: #d32828;
+}
+
+.phoneBlock {
+    padding-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    min-width: 700px;
+    width: 100%;
+}
+
+.phone {
+    display: flex;
+    width: 220px;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    background-color: #802e2e;
+    border-radius: 6px;
+    box-shadow: 4px 4px 4px rgb(34 60 80 / 20%);
+}
+
+.phone:hover {
+    background-color: #934040;
+    box-shadow: 4px 4px 4px rgba(140, 149, 157, 0.2);
+}
+
+.phone a {
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.phone a:hover {
+    color: #d2b438;
+    text-decoration: underline;
+}
+
+.phone img {
+    width: 27px;
+    height: 27px;
+    padding: 2px;
+    margin-right: 7px;
+}
+
+.phone img:hover {
+    background-color: #d2b438;
+    border-radius: 50%;
 }
