--- a/src/components/MainWindow/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/MainWindow/Profile/MyPosts/Post/Post.module.css
@@ -30,7 +30,7 @@
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    border: outset 4px ;
+    border: outset 4px;
 }
 
 .postAvatar img:hover {
@@ -74,12 +74,52 @@
     margin-left: 5px;
 }
 
+.form__btn {
+    display: flex;
+    justify-content: center;
+
+    margin: 10px auto 30px;
+    text-align: center;
+    width: 120px;
+    height: 30px;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: #601313;
+}
+
+.form__btn:hover {
+    opacity: .9;
+    color: #fff;
+}
+
+.form__btn button {
+    border: none;
+    background: none;
+    color: #fff;
+    cursor: pointer;
+}
+
+.delete__btn {
+    font-size: 30px;
+    margin-right: 20px;
+    background-color: #b2a583;
+    padding: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+    border: 4px outset #fff;
+}
+
+.delete__btn:hover {
+    background-color: #a69971;
+    border: 4px outset #a8792f;
+}
+
 @media (max-width: 750px) {
 
     .postAvatar img {
         width: 60px;
         height: 60px;
-        border: outset 3px ;
+        border: outset 3px;
     }
 
     .itemText {
@@ -115,6 +155,17 @@
     .activeBlock {
         width: 100px;
     }
+
+    .delete__btn {
+        font-size: 17px;
+        margin-right: 10px;
+        border: 3px outset #ffffff;
+    }
+
+    .delete__btn:hover {
+        border: 3px outset #a8792f;
+    }
+
 }
 
 @media (max-width: 400px) {
